--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -13,7 +13,7 @@
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
                 <a href="javascript:;">
-                    <img src="templates/fragments/xiaohui.jpg" class="layui-nav-img"></img>
+                    <img src="static/xiaohui.png" class="layui-nav-img"></img>
                     <!--shiro:principal property="sysUserName"></shiro:principal-->
                 </a>
                 <dl class="layui-nav-child">
@@ -32,7 +32,7 @@
                     <dl class="layui-nav-child">
                         <dd><a href="/database/cassandra">Cassandra</a></dd>
                         <dd><a href="/database/hbase">HBase</a></dd>
-                        <dd><a href="/database/mongo">MongoDB</a></dd>
+                        <dd><a href="/database/mongodb">MongoDB</a></dd>
                         <dd><a href="/database/mysql">Mysql-Cluster</a></dd>
                         <dd><a href="/database/postgres">Postgres-XL</a></dd>
                         <dd><a href="/database/redis">Redis</a></dd>
@@ -42,8 +42,8 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;">Setting</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="/">服务类目管理 </a></dd>
-                        <dd><a href="/">服务类型管理</a></dd>
+                        <dd><a href="/">setting 1 </a></dd>
+                        <dd><a href="/">setting 2</a></dd>
 
                     </dl>
                 </li>>
