--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -5,9 +5,8 @@
     <section th:fragment="content">
         <div class="layui-body">
             <!-- 内容主体区域 -->
-            <div style="padding: 5px;">内容主体区域
+            <div style="padding: 2px;">
                 <br></br>
-                <a href="/page">渠道</a>
             </div>
         </div>
     </section>
