--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -13,8 +13,8 @@
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
                 <a href="javascript:;">
-                    <img src="static/xiaohui.png" class="layui-nav-img"></img>
-                    <!--shiro:principal property="sysUserName"></shiro:principal-->
+                    <!--img src="static/xiaohui.png" class="layui-nav-img"></img>
+                    <shiro:principal property="sysUserName"></shiro:principal-->
                 </a>
                 <dl class="layui-nav-child">
                     <dd id="updUsePwdDd" class="layui-this"><a href="javascript:;" onclick="updateUsePwd();">修改密码</a></dd>
