--- a/src/main/resources/templates/hbase.html
+++ b/src/main/resources/templates/hbase.html
@@ -5,7 +5,7 @@
 <!--head部分-->
 <head th:include="layout :: htmlhead" th:with="title='CausalTest Management'">
 </head>
-<body class="layui-layout-body">
+<body class="layui-layout-body" ng-app="app" ng-controller="MainController">
 <div class="layui-layout layui-layout-admin">
     <!--头-->
     <div th:replace="fragments/head :: header"></div>
@@ -13,58 +13,12 @@
     <!--主体区域-->
     <div class="layui-body">
         <div class="layui-container">
-            <div class="layui-row">
-                <div class="layui-col-xs9">
-                    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+            <div class="layui-row " layui-col-space5>
+                <div class="layui-col-lg7">
+                    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 5px;">
                         <legend>HBase</legend>
                     </fieldset>
 
-
-
-                    <!--form class="layui-form" action="" lay-filter="example">
-
-                        <div class="layui-form-item">
-                            <label class="layui-form-label">Website</label>
-                            <div class="layui-input-block">
-                                <select name="website" lay-filter="aihao">
-                                    <option value="">Please Select A Website</option>
-                                    <option value="Twitter"selected="">Twitter</option>
-                                    <option value="Amazon" >Amazon</option>
-                                    <option value="Flickr" >Flickr</option>
-                                </select>
-                            </div>
-                        </div>
-
-                        <div class="layui-form-item">
-                            <label class="layui-form-label">TestTimes</label>
-                            <div class="layui-input-block">
-                                <input type="text" name="count" lay-verify="required" lay-reqtext="NOT NULL" placeholder="Times to execute test, e.g. 100000" autocomplete="off" class="layui-input">
-                            </div>
-                        </div>
-
-
-                        <div class="layui-form-item">
-                            <label class="layui-form-label">Consistency</label>
-                            <div class="layui-input-block">
-                                <select name="consistency" lay-filter="aihao">
-                                    <option value="">Please Select A Consistency Semantic</option>
-                                    <option value="RYW"selected="">Read Your Write</option>
-                                    <option value="MR" >Monotonic Read</option>
-                                    <option value="MW" >Monotonic Write</option>
-                                    <option value="WFR" >Write Follow Read</option>
-                                </select>
-                            </div>
-                        </div>
-
-
-                        <div class="layui-form-item">
-                            <div class="layui-input-block">
-                                <button type="submit" class="layui-btn" lay-submit="" lay-filter="demo1" >Save</button>
-                                <button type="reset" class="layui-btn layui-btn-primary">Reset</button>
-                                <button type="submit" class="layui-btn layui-btn-warm" lay-submit="" lay-filter="run">Run</button>
-                            </div>
-                        </div>
-                    </form-->
                     <form class="form-horizontal" role="form" action="/database/hbase" method="get">
                         <div class="form-group" >
                             <label for="website" class="col-sm-2 control-label">Website</label>
@@ -122,11 +76,15 @@
                         <div class="form-group">
                             <div class="col-md-12">
                                 <!--button type="submit" class="btn btn-success btn-lg btn-block" >Run</button-->
-                                <button  type="button" onclick="myRun()" class="btn  btn-success btn-lg btn-block">Run</button>
+                                <button  type="button" onclick="myRun()" class="btn  btn-success btn-lg btn-block"
+                                         ng-disabled="data.connected" ng-click="connect()">Run</button>
                             </div>
                         </div>
 
+
+
                         <div class="btn-group">
+                            <button type="button" ng-click="disconnect()" ng-disabled="!data.connected" class="btn  btn-danger">Stop</button>
                             <button id="btn1" type="button" onclick="myfun1()" class="btn btn-default">Kill Master</button>
                             <button id="btn2" type="button" onclick="myfun2()" class="btn btn-default">Kill Slave</button>
                             <button id="btn3" type="button" onclick="myfun3()" class="btn btn-default">Kill Master and Recover</button>
@@ -135,79 +93,8 @@
 
 
 
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                Result
-                            </div>
-
-                            <div id="table_refresh" style="height:400px;overflow:auto; position: relative;weight:1200px" th:fragment="table_refresh"
-                                 data-spy="scroll" data-target="#navbar-example" data-offset="0">
-                                <span th:text="${pwdresult}" ></span>
-                            </div>
-
-                        </div>
                     </form>
 
-
-
-
-
-                    <script>
-
-                            function myfun4() {
-                                $.ajax({
-                                    type:"get",
-                                    url:"/database/hbase/crash?id=4",
-                                    success:function (data) {
-                                        alert("success");
-                                    },
-                                    error:function () {
-                                        alert("error");
-                                    }
-                                });
-                            }
-                            function myfun3() {
-                                $.ajax({
-                                    type:"get",
-                                    url:"/database/hbase/crash?id=3",
-                                    success:function (data) {
-                                        alert("success");
-                                    },
-                                    error:function () {
-                                        alert("error");
-                                    }
-                                });
-                            }
-                            function myfun2() {
-                                $.ajax({
-                                    type:"get",
-                                    url:"/database/hbase/crash?id=2",
-                                    success:function (data) {
-                                        alert("success");
-                                    },
-                                    error:function () {
-                                        alert("error");
-                                    }
-                                });
-                            }
-                            function myfun1() {
-                                $.ajax({
-                                    type:"get",
-                                    url:"/database/hbase/crash?id=1",
-                                    success:function (data) {
-                                        alert("success");
-                                    },
-                                    error:function () {
-                                        alert("error");
-                                    }
-                                });
-                            }
-                            function myRun() {
-
-                                $('#table_refresh').load("/database/hbase/run");
-
-                            }
-                        </script>
                     <!--script>
                         $(function(){
                             var $btn=$(".btn");
@@ -230,11 +117,205 @@
 
 
                 </div>
+
+
+                <div class="layui-col-lg5">
+                    <div  id="echarts"  style="width: 450px;height:400px;"></div>
+                </div>
+
+
             </div>
+
+            <div class="layui-row">
+
+                <div class="layui-col-lg11" >
+
+                    <div class="panel panel-default" style="margin-top: 5px;">
+                        <div class="panel-heading">Log</div>
+
+                        <div ng-show="data.connected"  >
+                            <div style="height:300px;overflow-x:scroll; position: relative;weight:1000px" data-offset="10">
+                                {{data.message}}
+                            </div>
+                        </div>
+
+                        <ul class="nav nav-list"><li class="divider"></li></ul>
+
+                        <div id="table_refresh" style="height:400px;overflow:auto; position: relative;weight:1200px" th:fragment="table_refresh">
+                            <!---span th:text="${showresult}" ></span-->
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
     <!--底部-->
     <div th:replace="fragments/footer :: footer"></div>
 </div>
+
+
+
+<script type="text/javascript">
+
+    function myfun4() {
+        $.ajax({
+            type:"get",
+            url:"/database/hbase/crash?id=4",
+            success:function (data) {
+                alert("success");
+            },
+            error:function () {
+                alert("error");
+            }
+        });
+    }
+    function myfun3() {
+        $.ajax({
+            type:"get",
+            url:"/database/hbase/crash?id=3",
+            success:function (data) {
+                alert("success");
+            },
+            error:function () {
+                alert("error");
+            }
+        });
+    }
+    function myfun2() {
+        $.ajax({
+            type:"get",
+            url:"/database/hbase/crash?id=2",
+            success:function (data) {
+                alert("success");
+            },
+            error:function () {
+                alert("error");
+            }
+        });
+    }
+    function myfun1() {
+        $.ajax({
+            type:"get",
+            url:"/database/hbase/crash?id=1",
+            success:function (data) {
+                alert("success");
+            },
+            error:function () {
+                alert("error");
+            }
+        });
+    }
+    function myRun() {
+
+        $("#table_refresh").load("/database/hbase/run");
+
+    }
+
+
+
+    var stompClient = null;
+
+    var app = angular.module('app', []);
+    app.controller('MainController', function($rootScope, $scope, $http) {
+
+        $scope.data = {
+            connected : false,
+            sendMessage : '',
+            receivMessages : []
+        };
+
+        //连接
+        $scope.connect = function() {
+            var socket = new SockJS('/websocket-simple');
+            stompClient = Stomp.over(socket);
+            stompClient.connect({}, function(frame) {
+                // 订阅后端主动推消息到前端的topic
+                stompClient.subscribe('/topicTest/servertime', function(r) {
+                    $scope.data.message =  JSON.parse(r.body);
+                    $scope.data.connected = true;
+                    $scope.$apply();
+                });
+                $scope.data.connected = true;
+                $scope.$apply();
+            });
+        };
+
+        $scope.disconnect = function() {
+            if (stompClient != null) {
+                stompClient.disconnect();
+            }
+            $scope.data.connected = false;
+        }
+    });
+
+
+
+    var myChart = echarts.init(document.getElementById('echarts'));
+    myChart.setOption({
+        title: {
+            text: '异步数据加载示例'
+        },
+        tooltip: {},
+        legend: {
+            data:['销量']
+        },
+        xAxis: {
+            data: []
+        },
+        yAxis: {},
+        series: [{
+            name: '销量',
+            type: 'bar',
+            data: []
+        }]
+    });
+
+    myChart.showLoading();    //数据加载完之前先显示一段简单的loading动画
+
+    var names=[];    //类别数组（实际用来盛放X轴坐标值）
+    var nums=[];    //销量数组（实际用来盛放Y坐标值）
+
+    $.ajax({
+        type : "post",
+        async : true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
+        url : "/resultshow",    //请求发送到TestServlet处
+        data : {},
+        dataType : "json",        //返回数据形式为json
+        success : function(result) {
+            //请求成功时执行该函数内容，result即为服务器返回的json对象
+            if (result) {
+                for(var i=0;i<result.length;i++){
+                    names.push(result[i].name);    //挨个取出类别并填入类别数组
+                }
+                for(var i=0;i<result.length;i++){
+                    nums.push(result[i].num);    //挨个取出销量并填入销量数组
+                }
+                myChart.hideLoading();    //隐藏加载动画
+                myChart.setOption({        //加载数据图表
+                    xAxis: {
+                        data: names
+                    },
+                    series: [{
+                        // 根据名字对应到相应的系列
+                        name: '销量',
+                        data: nums
+                    }]
+                });
+
+            }
+
+        },
+        error : function(errorMsg) {
+            //请求失败时执行该函数
+            alert("图表请求数据失败!");
+            myChart.hideLoading();
+        }
+    })
+
+
+
+
+</script>
 </body>
 </html>
