--- a/src/main/resources/templates/hbase.html
+++ b/src/main/resources/templates/hbase.html
@@ -251,67 +251,91 @@
 
 
 
-    var myChart = echarts.init(document.getElementById('echarts'));
-    myChart.setOption({
-        title: {
-            text: '异步数据加载示例'
-        },
-        tooltip: {},
-        legend: {
-            data:['销量']
-        },
-        xAxis: {
-            data: []
-        },
-        yAxis: {},
-        series: [{
-            name: '销量',
-            type: 'bar',
-            data: []
-        }]
+    $(function(){
+        setFsChartBar();
     });
-
-    myChart.showLoading();    //数据加载完之前先显示一段简单的loading动画
-
-    var names=[];    //类别数组（实际用来盛放X轴坐标值）
-    var nums=[];    //销量数组（实际用来盛放Y坐标值）
-
-    $.ajax({
-        type : "post",
-        async : true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
-        url : "/resultshow",    //请求发送到TestServlet处
-        data : {},
-        dataType : "json",        //返回数据形式为json
-        success : function(result) {
-            //请求成功时执行该函数内容，result即为服务器返回的json对象
-            if (result) {
-                for(var i=0;i<result.length;i++){
-                    names.push(result[i].name);    //挨个取出类别并填入类别数组
-                }
-                for(var i=0;i<result.length;i++){
-                    nums.push(result[i].num);    //挨个取出销量并填入销量数组
-                }
-                myChart.hideLoading();    //隐藏加载动画
-                myChart.setOption({        //加载数据图表
-                    xAxis: {
-                        data: names
+    function setFsChartBar(url){
+        var myChart = echarts.init(document.getElementById('echarts'));
+        //用户等待
+        myChart.showLoading({text: 'Loding...'  });
+        //自定义变量
+        var times=[];
+        var violaiton = [];
+        var exception = [];
+        getData(myChart); //先执行一次，以防等十秒后才出现图表
+        setInterval(function(){//定时器
+            getData(myChart);
+        },1000);//每隔10秒刷新一次
+    }
+    //获取数据的方法
+    function getData(myChart)
+    {
+        //发送Ajax请求
+        $.ajax({
+            url : "/resultshow",
+            dataType:"json",
+            type:'post',
+            success:function(json){//
+                console.log("获取图表数据");
+                console.log(json);
+                times = json.resulttime;  //拿到后台的数据
+                violation = json.violationnum;   //拿到后台的数据
+                exception = json.exceptionnum;
+                var option = {
+                    title: {
+                        text: 'Statistics'
                     },
-                    series: [{
-                        // 根据名字对应到相应的系列
-                        name: '销量',
-                        data: nums
-                    }]
-                });
 
+                    tooltip: {
+                        trigger: 'axis'
+                    },
+
+                    legend: {
+                        data:['violation','exception']
+                    },
+
+                    grid: {
+                        left: '3%',
+                        right: '4%',
+                        bottom: '3%',
+                        containLabel: true
+                    },
+                    toolbox: {
+                        feature: {
+                            saveAsImage: {}
+                        }
+                    },
+
+                    xAxis: {
+                        type: 'category',
+                        boundaryGap: false,
+                        data:times
+                    },
+
+                    yAxis: {
+                        type: 'value'
+
+                    },
+                    series :[
+                        {
+                            name:'violation',
+                            type:'line',
+                            data: violation
+                        }  ,
+                        {
+                            name:'exception',
+                            type:'line',
+                            data: exception
+                        }
+                    ]
+                };
+                //结束
+                myChart.hideLoading();
+               // setTimeout(myChart.setOption(option),500)
+                //myChart.setOption(option);
             }
-
-        },
-        error : function(errorMsg) {
-            //请求失败时执行该函数
-            alert("图表请求数据失败!");
-            myChart.hideLoading();
-        }
-    })
+        });
+    }
 
 
 
