--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,7 +2,11 @@
 <html  xmlns:th="http://www.thymeleaf.org">
 <body>
 <footer th:fragment="footer">
-    <p>&copy; ZY1706228 Zhao Le.</p>
+
+    <div class="layui-footer">
+        <!-- 底部固定区域 -->
+        <p>&copy; ZY1706228 Zhao Le.</p>
+    </div>
 </footer>
 </body>
 </html>
