--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -27,8 +27,8 @@
     <div class="layui-side layui-bg-black">
         <div class="layui-side-scroll">
             <ul class="layui-nav layui-nav-tree"  lay-filter="test">
-                <<li class="layui-nav-item layui-nav-itemed">
-                    <a href="javascript:;">Data Replication</a>
+                <li class="layui-nav-item layui-nav-itemed ">
+                <a  href="javascript:;">Data Replication </a>
                     <dl class="layui-nav-child">
                         <dd><a href="/database/cassandra">Cassandra</a></dd>
                         <dd><a href="/database/hbase">HBase</a></dd>
@@ -40,13 +40,13 @@
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">Setting</a>
+                    <a  href="javascript:;">Setting</a>
                     <dl class="layui-nav-child">
                         <dd><a href="/">setting 1 </a></dd>
                         <dd><a href="/">setting 2</a></dd>
 
                     </dl>
-                </li>>
+                </li>
             </ul>
         </div>
     </div>
