--- a/src/main/resources/templates/hbase.html
+++ b/src/main/resources/templates/hbase.html
@@ -13,9 +13,9 @@
     <!--主体区域-->
     <div class="layui-body">
         <div class="layui-container">
-            <div class="layui-row " layui-col-space5>
-                <div class="layui-col-lg7">
-                    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 5px;">
+            <div class="layui-row " >
+                <div class="layui-col-xs9">
+                    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
                         <legend>HBase</legend>
                     </fieldset>
 
